--- a/template/contact.html
+++ b/template/contact.html
@@ -1,6 +1,7 @@
 <div class='row' id='contact'>
 		<div class='container'>
-			 <form class='form-group' action="" method="POST" enctype="multipart/form-data">
+			 <h1 ng-bind='emailAlert' id='emailAlert' ng-class="{active:emailAlert.length}"></h1>
+			 <form class='form-group' id='contactForm' method="POST" enctype="multipart/form-data">
 				<!--<input type="hidden" name="action" value="submit">-->
 				<h1 class='section-header' style='color:#fff;margin-top: 0px;margin-bottom: 50px;font-family: roboto'>Make a Wish</h1>
 				<table class='table'>
