--- a/css/team.css
+++ b/css/team.css
@@ -2,7 +2,7 @@
 	
 	height: 270px;
 	width:100%;
-	margin: 10px;
+	margin: 10px 0px;
 	background-color:#482d1b;		
 	float:left;
 	position:relative;
