--- a/template/showcase.html
+++ b/template/showcase.html
@@ -1,10 +1,10 @@
-<div class='col-lg-12 col-md-12 col-sm-12 col-xs-12 clearfix pad0' id='profile' style='padding-top:0px;'>
+<div class='col-lg-12 col-md-12 col-sm-12 col-xs-12 clearfix pad0' id='showcase' style='padding-top:0px;'>
 	<div class="clearfix showcaseBg" style="padding: 150px 0px;">
 		<h1 class='section-header' style='text-align:center;'>Showcase</h1>
 	</div>
 	<div class='container' style='text-align:center;'>
-		<a class='btn btn-custom' ng-click='setPV(1)' ng-class='{selected:showcase==1}'>PHOTOS</a>
-		<a class='btn btn-custom' ng-click='setPV(2)' ng-class='{selected:showcase==2}'>CINEMAS</a>
+		<a class='btn btn-custom' ng-click='setPhotoVideo(1)' ng-class='{selected:showcase==1}'>PHOTOS</a>
+		<a class='btn btn-custom' ng-click='setPhotoVideo(2)' ng-class='{selected:showcase==2}'>CINEMAS</a>
 	</div>
 </div>
 
