--- a/template/photos.html
+++ b/template/photos.html
@@ -1,4 +1,4 @@
-<div id='photos' class='col-lg-12 col-md-12 col-sm-12 col-xs-12  clearfix' style="padding-right: 0px" ng-if='showcase==1'>
+<div id='photos' class='col-lg-12 col-md-12 col-sm-12 col-xs-12  clearfix pad0' ng-if='showcase==1'>
 	<div class='col-lg-3 col-md-3 col-sm-6 col-xs-6 pic-holder-p p6' id='sc1' ng-click='setCat(1)'><div class='softbox'>PRE WEDDING<br><span>[ memories ]</span></div></div>
 	<div class='col-lg-3 col-md-3 col-sm-6 col-xs-6 pic-holder-p p8' id='sc2' ng-click='setCat(2)'><div class='softbox'>BRIDE & GROOM<br><span>[ memories ]</span></div></div>
 	<div class='col-lg-3 col-md-3 col-sm-6 col-xs-6 pic-holder-p p7' id='sc3' ng-click='setCat(3)'><div class='softbox'>SANGEET<br><span>[ memories ]</span></div></div>
