--- a/template/gallery.html
+++ b/template/gallery.html
@@ -1,4 +1,4 @@
-<div class='col-lg-12 col-md-12 col-sm-12 col-xs-12 clearfix' id='artboard'>
+<div class='container clearfix' id='artboard'>
 	<ul style="padding: 0px" id='gallery-list'>
 		<h1 style="margin-bottom: 20px;">{{activeGalleryTtle}}</h1>
 		<a ng-repeat="img in setShowcaseGallery" class="example-image-link" href="{{img.fullImg}}" 
