bug fix: photo/cinema button should be independent

--- a/template/packages.html
+++ b/template/packages.html
@@ -3,7 +3,7 @@
 	<div class='container'>
 		<div class='para'>
 			<p>Our packages are designed to meet all of your different needs and we are confident that with the available options
-			at Wishtree Cinemas you will find the service you are looking for. Should you have any question regarding the packages
+			at WishTree Cinemas you will find the service you are looking for. Should you have any question regarding the packages
 			feel free give us a call to discuss over.
 			</p>
 	
