--- a/template/showcase.html
+++ b/template/showcase.html
@@ -10,6 +10,6 @@
 
 
 
-<div class='clearfix' ng-include="'template/gallery.html'"></div>	
-<div class='clearfix' ng-include="'template/photos.html'" ng-if='showcase==1'></div>	
-<div class='clearfix' ng-include="'template/videos.html'" ng-if='showcase==2'></div>	
+<div class='col-lg-12 col-md-12 col-sm-12 col-xs-12 clearfix' ng-include="'template/gallery.html'" ng-if='showcase==1'></div>	
+<div class='col-lg-12 col-md-12 col-sm-12 col-xs-12 clearfix' ng-include="'template/photos.html'" ng-if='showcase==1'></div>	
+<div class='col-lg-12 col-md-12 col-sm-12 col-xs-12 clearfix' ng-include="'template/videos.html'" ng-if='showcase==2'></div>	
