--- a/css/team.css
+++ b/css/team.css
@@ -3,7 +3,7 @@
 	height: 270px;
 	width:100%;
 	margin: 10px 0px;
-	background-color:#482d1b;		
+	background-color:#c1c1c1;		
 	float:left;
 	position:relative;
 	transition:all .5s ease;
@@ -38,10 +38,14 @@
 .jobTitle{
 	font-family: 'Roboto Slab', serif;
 	position: absolute;
-	bottom: 20px;
-  text-align: center;
-  width: 100%;
-  color: #fff;
+	bottom: 0px;
+	padding: 15px;
+	opacity: .85;
+	text-shadow: 1px 1px 1px #fff;
+	background-color: #f1f1f1;
+  	text-align: center;
+  	width: 100%;
+  	color: #000;
  	transition: all .3s cubic-bezier(0.06, 0.39, 0.43, 0.71);
 	-moz-transition: all .3s cubic-bezier(0.06, 0.39, 0.43, 0.71);
 	-ms-transition: all .3s cubic-bezier(0.06, 0.39, 0.43, 0.71);
@@ -55,7 +59,7 @@
 .team-holder>.jobDesc{
 	opacity: 0;
 	top: -100px;
-	background-color: #482d1b;
+	background-color: #2f2519;
 	color: #fff;
 	z-index:-1;
 	position: absolute;
