--- a/template/otherContacts.html
+++ b/template/otherContacts.html
@@ -18,14 +18,11 @@
 					</tr>
 					
 				</table>
-				<div class='row' style='margin:50px;margin-bottom:100px;'>
+				<div class='row' style='margin:50px;'>
 					<p style='text-align:center'>
 						<img src='img\logo\wishtree-lrg-2.png'/>
 					</p>
 				</div>
 			</form>
-			<!--copyright-->
-			<div ng-include="'template/copyright.html'"></div>
-
 		</div>
 </div>
