--- a/template/about.html
+++ b/template/about.html
@@ -2,7 +2,10 @@
 	<h1 class='spf' style='margin-top:50px'>The WishTree Story</h1>
 	<div class='container'>
 		<div class='para'>
-			<p><span class='spf' style='font-size:28px'>W</span>e were often told to follow our hearts, and so we did -- WishTree came to life because of you. We are your eyes, capturing magical moments filled with excitement and love so that you don’t have to worry about your memories fading with the sands of time. Your milestones should not be pieced together by blurred and fading memories as you grow older together. Your memories deserve to be everlasting, crystal clear and with you, forever.
+			<p><span class='spf' style='font-size:28px'>P</span>assion breeds perfection; and that mere fact drove our ambitions and we embarked upon founding this company. 
+			We are uncompromising when faced with challenges. 
+			Give us the opportunity to capture the best moments of your life. Let us freeze the time in our camera-frames that you will cherish forever while we satisfy our hunger for perfection.
+			We believe that every love story is eternal and we are here to make your wedding everlasting
 			</p>
 			<p style='text-align:center'>
 				<img src='img\logo\wishtree-lrg-2.png'/>
