--- a/css/wt.css
+++ b/css/wt.css
@@ -520,8 +520,8 @@ hr{
 }
 #copyright{
 	font-family: roboto;
-	color: #fff;
-	background-color: #000;
+	color: #333;
+	background-color: #fff;
 	font-weight: 700;
 	font-size: 80%;
 	padding:50px!important;
