--- a/template/copyright.html
+++ b/template/copyright.html
@@ -1,1 +1,4 @@
-<div class='row text-center' id='copyright'>Copyright WishTree Cinemas Corp. 2017</div>
+<div class='row text-center' id='copyright'>
+	<logo-sm></logo-sm>
+	Copyright WishTree Cinemas Corp. 2017
+</div>
