--- a/template/videos.html
+++ b/template/videos.html
@@ -2,76 +2,22 @@
 	<div class='row'>
 		<div class='col-lg-3 col-md-3 hidden-sm hidden-xs'></div>
 		<div class='col-lg-6 col-md-6 col-sm-12 col-xs-12 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/224790695" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			
+			<iframe ng-src="{{featureVideo | trusted}}" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
 		<div class='col-lg-3 col-md-3 hidden-sm hidden-xs'></div>				
 	</div>
-	<div class='row hidden-sm hidden-xs' >
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/209650599" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/203751361" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/196661823" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
+	
+	<div class='col-lg-12 col-md-12 hidden-sm hidden-xs'>
+		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1' ng-repeat='src in videos'>
+			<iframe ng-src="{{src | trusted}}" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
 	</div>
-	<div class='row hidden-sm hidden-xs'>			
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/202850551" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-		</div>
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/199474361" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-		</div>
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/198624016" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-	</div>
-	<div class='row hidden-sm hidden-xs' >
-		<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/200387189" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-	</div>	
-	<div class='row hidden-lg hidden-md' >
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/209650599" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>		
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/203751361" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-	</div>	
-	<div class='row hidden-lg hidden-md' >	
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/202850551" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-		</div>
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/199474361" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-	</div>
-	<div class='row hidden-lg hidden-md' >	
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/198624016" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/200387189" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		</div>
-	</div>
-	<div class='row hidden-lg hidden-md' >
-		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1'>
-			<iframe src="https://player.vimeo.com/video/196661823" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
+	<div class='col-sm-12 col-xs-12 hidden-lg hidden-md'>
+		<div class='col-sm-6 col-xs-6 pic-holder vid-holder v1' ng-repeat='src in videos'>
+			<iframe ng-src="{{src | trusted}}" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			
 		</div>
 	</div>
 </div>
