--- a/css/wt.css
+++ b/css/wt.css
@@ -683,3 +683,19 @@ hr{
 #sm-menu.active{
 	display: block;
 }
+
+.come-in {
+  transform: translateY(150px);
+  animation: come-in 0.8s ease forwards;
+}
+.come-in:nth-child(odd) {
+  animation-duration: 0.6s;
+}
+.already-visible {
+  transform: translateY(0);
+  animation: none;
+}
+
+@keyframes come-in {
+  to { transform: translateY(0); }
+}
