--- a/template/newClient.html
+++ b/template/newClient.html
@@ -7,7 +7,7 @@
 			<input class='form-control' type="password" ng-class="{'error':pass1!=pass2}" ng-model="pass2" placeholder="re-type password">
 			<div>
 				<a class='btn btn-success btn-sm'>Create Client</a>
-				<a class='btn btn-default btn-sm' ng-click='ctrl.dismiss()'>Cancel</a>
+				<a class='btn btn-default btn-sm' ng-click='ctrl1.dismiss();'>Cancel</a>
 			</div>			
 		</form>
 	</div>	
