--- a/css/contracts.css
+++ b/css/contracts.css
@@ -85,3 +85,14 @@
 	border-radius: 4px;
 	margin: 2px;
 }
+#contract-detail-table a.days{
+	cursor: pointer;
+	margin-right: 10px;
+	padding: 10px 0px;
+
+}
+
+#contract-detail-table a.days.active{
+	font-weight: bold;
+	text-decoration: underline;
+}
