--- a/css/contracts.css
+++ b/css/contracts.css
@@ -77,7 +77,7 @@
 	border-color: #f5644d;
 }
 
-#contract-detail-table td{
+#contract-detail-table {
 	padding: 3px;
 	border: none;
 }
@@ -88,11 +88,32 @@
 #contract-detail-table a.days{
 	cursor: pointer;
 	margin-right: 10px;
-	padding: 10px 0px;
-
+	padding: 10px;
+	border-style: solid;
+	border-radius: 4px 4px 0px 0px;
+	border-width: 1px 1px 0px 1px;
+	border-color: transparent;
+	color: #8a6d3b;
+}
+#contractId {
+	font-size: 80%;
+	color: #8a6d3b;
+	padding-bottom: 8px;
+	text-transform: uppercase;
+}
+#contract-detail-table a.days.active{
+	border-color: #8a6d3b;
+	background-color: #8a6d3b;
+	color: #fff;
 }
 
-#contract-detail-table a.days.active{
-	font-weight: bold;
-	text-decoration: underline;
+#contract-detail-table .day-wrapper{
+	padding: 10px;
+	border:1px solid #8a6d3b;
+	background-color: #fcfcfc;
+}
+#contract-detail-table textarea{
+	width:100%;
+	height: 50px;
+	margin: 3px 2px;
 }
