--- a/template/newClient.html
+++ b/template/newClient.html
@@ -3,10 +3,11 @@
 		<h3>New Client</h3>
 		<form class="form-group">
 			<input class='form-control' type="text" ng-model="clientName" placeholder="Name">
+			<input class='form-control' type="text" ng-model="clientEmail" placeholder="Email">
 			<input class='form-control' type="password" ng-class="{'error':pass1!=pass2}" ng-model="pass1" placeholder="password">
 			<input class='form-control' type="password" ng-class="{'error':pass1!=pass2}" ng-model="pass2" placeholder="re-type password">
 			<div>
-				<a class='btn btn-success btn-sm'>Create Client</a>
+				<a class='btn btn-success btn-sm' ng-click='ctrl1.saveClient()'>Create Client</a>
 				<a class='btn btn-default btn-sm' ng-click='ctrl1.dismiss();'>Cancel</a>
 			</div>			
 		</form>
