Contract Form: Price, initPayment and dueAmount added.

--- a/css/contracts.css
+++ b/css/contracts.css
@@ -117,3 +117,10 @@
 	height: 50px;
 	margin: 3px 2px;
 }
+#priceTable label:after{
+	content: ":"
+}
+#priceTable label{
+	font-size: 14px;
+	padding-right: 5px;
+}
